			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02h: *********************************

BUG: (02/11/05, SMR) Libraries do not read in properly (Bug #203).
FIX: In input.ELIB.realizeArcs(), must compute bounds after bits are set, so bounds computation
     moved from ArcInst.lowLevelPopulate() to ArcInst.lowLevelLink().

BUG: (02/11/05, SMR) Zero-length arcs lose their angle information when read from ELIB.
FIX: In input.ELIB.realizeArcs(), take angle from the "userbits".

BUG: (02/11/05, SMR) "Properties" dialogs now stay on top in Windows SDI environment (Bug #202).
FIX: In EditWindow.paint(), call "requestFocusInWindow()" instead of "requestFocus()".

BUG: (02/11/05, SMR) Cross-library copy may not copy all subcells (Bug #200).
FIX: In CircuitChanges.copyRecursively(), when recursing to a related view,
     supress more related views for the current cell only.

BUG: (02/11/05, SMR) Copying cells doesn't get arcs right.
FIX: In Cell.copyNodeProto(), make sure the end coordinates match the PortInsts.

BUG: (02/11/05, SMR) Verilog templates ignore parameters that have default values.
FIX: In Verilog.writeTemplate(), look to prototype if variable is not in instance.

BUG: (02/11/05, SMR) Verilog templates include square brackets in output (Bug #201).
FIX: In Verilog.writeTemplate(), request that instance names be "bus converted".

IMP: (02/11/05, SMR) "Measure" mode in waveform window now crosses panels.

IMP: (02/10/05, SMR) Can now import/export preferences (Bug #196).

BUG: (02/10/05, SMR) Ascending from a "down hierarchy in place" may display wrong (Bug #199).
FIX: In EditWindow.upHierarchy() and downHierarchy() must call PixelDrawing.clearSubCellCache().

BUG: (02/10/05, SMR) Descending into a rotated cell displays global coordinates wrong (Bug #198).
FIX: In EditWindow.showCoordinates() compute transformations properly.
